# contentfilter

./: .gitignore  Cargo.toml  README.md  client.py
docs/: api-design.md  class-diagram.md
docs/apis/: add-a-sieve.md  create-a-filter.md  detect-content.md  how-to-use-contentfilter.md
examples/: add_words.py  b64c.py  client.py
src/: main.rs  service.rs
src/algo/: mod.rs
src/algo/image/: dhash.rs  mod.rs
src/config/: mod.rs
src/data/: store.rs
src/detection/: mod.rs  trie.rs
src/filter/: forest.rs
tests/: dhash_test.rs  trie_test.rs
