[package]
name = "contentfilter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.4"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0.0"
sqlite = "0.27.0"
md5 = "0.7.0"
base64 = "0.13.1"
rand = "0.8.5"
actix-files = "0.6.2"